--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,11 +26,13 @@ spring:
       hibernate:
         format_sql: true
         default_batch_fetch_size: 100
-  h2:
-    console:
-      enabled: false
   sql:
     init:
       mode: always
+      detection-strategy: annotated
+  data:
+    rest:
+      base-path: /api
+      detection-strategy: annotated
 
 
