--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,6 +26,7 @@ spring:
       hibernate:
         format_sql: true
         default_batch_fetch_size: 100
+    open-in-view: false
   sql:
     init:
       mode: always
