--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,10 +13,9 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/board
-    username: qnfzksla
+    url: jdbc:postgresql://localhost:5432/board
+    username: postgres
     password: 1584
-    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     defer-datasource-initialization: true
     hibernate:
