--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,5 @@
 debug: false
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
+management.endpoints.web.exposure.include: "*"
 
 logging:
   level:
@@ -17,27 +13,32 @@ spring:
     username: postgres
     password: 1584
   jpa:
+    open-in-view: false
     defer-datasource-initialization: true
-    hibernate:
-      ddl-auto: create
+    hibernate.ddl-auto: create
     show-sql: true
     properties:
-      hibernate:
-        format_sql: true
-        default_batch_fetch_size: 100
-    open-in-view: false
-  sql:
-    init:
-      mode: always
-      detection-strategy: annotated
-  data:
-    rest:
-      base-path: /api
-      detection-strategy: annotated
-
-  thymeleaf3:
-    decoupled-logic: true
-
-
-
+      hibernate.format_sql: true
+      hibernate.default_batch_fetch_size: 100
+  sql.init.mode: always
+  data.rest:
+    base-path: /api
+    detection-strategy: annotated
+  thymeleaf3.decoupled-logic: true
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: ${KAKAO_OAUTH_CLIENT_ID}
+            client-secret: ${KAKAO_OAUTH_CLIENT_SECRET}
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/login/oauth2/code/kakao"
+            client-authentication-method: POST
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
 
