--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,9 +9,9 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/board
-    username: postgres
-    password: 1584
+    url: ${LOCAL_DB-URL}
+    username: ${LOCAL_DB-USERNAME}
+    password: ${LOCAL_DB-PASSWORD}
   jpa:
     open-in-view: false
     defer-datasource-initialization: true
